fix: text-align(

--- a/admin/assets/styles/pages/index.scss
+++ b/admin/assets/styles/pages/index.scss
@@ -2,6 +2,10 @@
 
     h1{
         margin: 30px 0;
+
+        @media screen and (max-width: 400px) {
+            text-align: center;
+        }
     }
 
     > div{
